@@ -2,6 +2,10 @@
 
 	* configure.in: Move to 2.8-rc3
 
+	* dataxfer.c, dataxfer.h, selector.c, selector.h, ser2net.c: Add
+	clean shutdown handling so locks are properly removed when the
+	program is killed with SIGINT.
+
 2012-09-10  Corey Minyard <minyard@acm.org>
 
 	* dataxfer.c: Fix a bug reported by Jan-Benedict Glaw, where
